<resources>
    <string name="app_name">SilentMoon</string>
    <string name="silent">Silent</string>
    <string name="moon">Moon</string>
    <string name="onboarding_title">We are what we do</string>
    <string name="onboarding_msg">Thousands of people are using silent moon for small meditations</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_bottom_text_part">ALREADY HAVE AN ACCOUNT?</string>
    <string name="sign_up_bottom_text_clickable_part">LOG IN</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="facebook_log_in">CONTINUE WITH FACEBOOK</string>
    <string name="google_log_in">CONTINUE WITH GOOGLE⠀⠀</string>
    <string name="email_log_in">OR LOG IN WITH EMAIL</string>
    <string name="email_sign_up">OR SIGN UP WITH EMAIL</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_bottom_text_part">DON\'T HAVE AN ACCOUNT?</string>
    <string name="log_in_bottom_text_clickable_part">SIGN UP</string>
    <string name="create_account">Create your account</string>
    <string name="privacy_policy_confirmation_part">I HAVE READ THE</string>
    <string name="privacy_policy_confirmation_clickable_part">PRIVACY POLICY</string>
    <string name="get_started">GET STARTED</string>
    <string name="name_hint">Name</string>
    <string name="privacy_policy_stub">Тут будет политика конфиденциальности</string>
    <string name="welcome_top_msg"><b>Hi Afsar, Welcome</b> <br /> to Silent Moon</string>
    <string name="welcome_bottom_msg">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="choose_topic_top_title"><b>What Brings you</b>
to Silent Moon?</string>
    <string name="choose_topic_top_subtitle">choose a topic to focus on:</string>
    <string name="topic_stress">Reduce Stress</string>
    <string name="topic_performance">Improve Performance</string>
    <string name="topic_happiness">Increase Happiness</string>
    <string name="topic_anxiety">Reduce Anxiety</string>
    <string name="topic_growth">Personal Growth</string>
    <string name="topic_sleep">Better Sleep</string>
    <string name="topic_productivity">Increase Productivity</string>
    <string name="reminders_title_time">What time would you like to meditate?</string>
    <string name="reminders_subtitle_time">You can choose any time, but we recommend doing it first thing in the morning.</string>
    <string name="reminders_title_days">What days would you like to meditate?</string>
    <string name="reminders_subtitle_days">We recommend choosing at least five, preferably every day.</string>
    <string name="save">SAVE</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="sunday">SU</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">TH</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="menu_home">Home</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_meditate">Meditate</string>
    <string name="menu_music">Music</string>
    <string name="menu_profile">Profile</string>
    <string name="home_title">Good Morning, Afsar</string>
    <string name="home_subtitle">We wish you a good day</string>
    <string name="basics">Basics</string>
    <string name="relaxation">Relaxation</string>
    <string name="daily_thought">Daily Thought</string>
    <string name="course">COURSE</string>
    <string name="music">MUSIC</string>
    <string name="meditation">MEDITATION</string>
    <string name="three_ten_minutes">3–10 MIN</string>
    <string name="start">START</string>
    <string name="meditation_three_ten">MEDITATION⠀3–10 MIN</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="focus">Focus</string>
    <string name="happiness">Happiness</string>
    <string name="happy_morning">Happy Morning</string>
    <string name="happy_morning_details">Ease the mind into a restful night’s sleep with these deep, ambient tones.</string>
    <string name="course_details_favourites">24.234 Favourites</string>
    <string name="course_details_listening">34.234 Listening</string>
    <string name="pick_a_narrator">Pick a Narrator</string>
    <string name="male_voice">Male Voice</string>
    <string name="female_voice">Female Voice</string>
    <string name="min_formattable">%1$d MIN</string>
    <string name="focus_attention">Focus Attention</string>
    <string name="body_scan">Body Scan</string>
    <string name="making_happiness">Making Happiness</string>
    <string name="seven_days_of_calm">7 Days Of Calm</string>
    <string name="music_current_placeholder">01:30</string>
    <string name="music_duration_placeholder">45:00</string>
    <string name="meditate_v2_subtitle">We can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="meditate_v2_menu_all">All</string>
    <string name="meditate_v2_menu_my">My</string>
    <string name="meditate_v2_menu_anxious">Anxious</string>
    <string name="meditate_v2_menu_sleep">Sleep</string>
    <string name="meditate_v2_menu_kids">Kids</string>
    <string name="meditate_v2_title">Meditate</string>
    <string name="daily_calm">Daily Calm</string>
    <string name="apr_30">APR 30</string>
    <string name="pause_practice">PAUSE PRACTICE</string>
    <string name="anxiety_release">Anxiety Release</string>
    <string name="welcome_sleep_title">Welcome To Sleep</string>
    <string name="welcome_sleep_subtitle">Explore the new kind of sleep. It uses sound and visualization to create perfect conditions for a refreshing sleep.</string>
    <string name="sleep_title">Sleep Stories</string>
    <string name="sleep_subtitle">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="ocean_moon_title">The Ocean Moon</string>
    <string name="ocean_moon_subtitle">Non-stop 8-hour mixes of our most popular sleep audio</string>
    <string name="night_island">Night Island</string>
    <string name="sweet_sleep">Sweet Sleep</string>
    <string name="moon_clouds">Moon Clouds</string>
    <string name="good_night">Good Night</string>
    <string name="sleep_music">SLEEP MUSIC</string>
    <string name="play_option_subtitle">Ease the mind into a restful night’s sleep with these deep, ambient tones.</string>
    <string name="related">Related</string>
    <string name="play">PLAY</string>
    <string name="forty_five_min">45 MIN</string>
    <string name="sleep_music_lowercase">Sleep Music</string>
    <string name="profile_stub">Profile stub</string>
</resources>