<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sign_in_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sign_in_bg" />

        <TextView
            android:id="@+id/sign_in_top_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:fontFamily="@font/roboto_bold"
            android:lines="1"
            android:paddingTop="@dimen/margin_regular"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="38sp" />

        <Button
            android:id="@+id/sign_in_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:text="@string/facebook_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_top_msg"
            tools:ignore="RtlSymmetry"
            style="@style/facebook_button" />

        <Button
            android:id="@+id/sign_in_google_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:text="@string/google_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_facebook_button"
            tools:ignore="RtlSymmetry"
            style="@style/google_button" />

        <TextView
            android:id="@+id/email_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="1sp"
            android:lines="1"
            android:text="@string/email_log_in"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_google_button" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field_log_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_log_in"
            style="@style/credentials_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                style="@style/credentials_field_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field_log_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_field_log_in"
            style="@style/credentials_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                style="@style/credentials_field_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_field_log_in"
            style="@style/primary_button" />

        <TextView
            android:id="@+id/forgot_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginBottom="@dimen/margin_regular"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="1sp"
            android:lines="1"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/sign_in_bottom_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in_button"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/sign_in_bottom_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:lines="1"
            android:paddingBottom="32dp"
            android:text="@string/log_in_bottom_text_part"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textColorHighlight="@color/transparent"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>