<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/item_horizontal_margin"
    android:layout_marginEnd="@dimen/item_horizontal_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/home_holder_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/focus_bg"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/home_holder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="1sp"
        android:text="@string/focus"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="1sp"
            android:text="@string/meditation"
            android:textColor="@color/secondary_text"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/dot"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:text="@string/three_ten_minutes"
            android:textColor="@color/secondary_text"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>