<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/item_horizontal_margin"
    android:layout_marginEnd="@dimen/item_horizontal_margin"
    android:layout_marginBottom="@dimen/margin_small"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sleep_holder_image"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:adjustViewBounds="false"
        android:background="@drawable/topic_viewholder_bg"
        android:backgroundTint="@color/sleep_bg"
        android:importantForAccessibility="no"
        android:outlineProvider="background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/night_island_bg" />

    <TextView
        android:id="@+id/sleep_holder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica_neue_medium"
        android:lineSpacingExtra="1sp"
        android:text="@string/night_island"
        android:textColor="@color/very_light_gray_variant"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sleep_holder_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_medium"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="1sp"
            android:text="@string/three_ten_minutes"
            android:textColor="@color/sleep_secondary_text"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            android:tintMode="src_in"
            app:srcCompat="@drawable/dot"
            app:tint="@color/sleep_secondary_text" />

        <TextView
            android:id="@+id/sleep_holder_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_medium"
            android:letterSpacing="0.05"
            android:text="@string/sleep_music"
            android:textColor="@color/sleep_secondary_text"
            android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>